# conveyor-game

./: .gitignore  Cargo.toml  README.md  fuck.txt  how-tips-should-work.rs  new-level.cglf  roadmap.md  sui-events.md  todo.md  worldgen.md
.github/workflows/: rust.yml
assets/: README.md
assets/levels/: levels.toml
assets/levels/tutorial/: introduction.toml  level.cglf  tips.toml
assets/worldgen/segments/: README.md  coal_1.cglf  coal_2.cglf  iron_1.cglf  iron_2.cglf  iron_3.cglf  nuggets.cglf  segments.toml
crates/async_texture/: Cargo.toml
crates/async_texture/src/: lib.rs
crates/comp_extra/: Cargo.toml
crates/comp_extra/src/: button.rs  err_page.rs  fullscreen_wrap.rs  lib.rs
crates/game/: Cargo.toml
crates/game/locales/: hu.yml
crates/game/src/: assets.rs  lib.rs  main.rs
crates/game/src/comp/: button.rs  err_page.rs  mod.rs  toolbar.rs
crates/game/src/game/: game.rs  goal.rs  mod.rs  provider.rs  runner.rs  timer.rs  tool.rs
crates/game/src/levels/: game_state.rs  mod.rs
crates/game/src/scripts/: main.rs  tips.rs
crates/game/src/scripts/tutorial/: controller.rs  mod.rs
crates/game/src/textures/: loader.rs
crates/game/src/utils/: connected.rs  mod.rs  show_mouse.rs
crates/game/src/world/buildings/: channel_consumer.rs  conveyor.rs  mod.rs  small_extractor.rs
crates/game/src/world/maps/: tilemap.rs
crates/game/src/world/resources/: coal.rs  mod.rs
crates/game/src/world/tile/: stone.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: lib.rs  tool.rs
crates/game_core/src/buildings/: channel_consumer.rs  conveyor.rs  debug_consumer.rs  junction.rs  mod.rs  small_extractor.rs
crates/game_core/src/maps/: mod.rs
crates/game_core/src/prov/: data.rs  mod.rs  provider.rs
crates/game_core/src/resources/: coal.rs  mod.rs
crates/game_core/src/tile/: mod.rs
crates/game_core/src/world/: mod.rs  render.rs  worldgen.rs
crates/game_core/src/world/buildings/: channel_consumer.rs  conveyor.rs  debug_consumer.rs  junction.rs  mod.rs  router.rs  small_extractor.rs  smelter.rs
crates/game_core/src/world/maps/: buildingsmap.rs  mod.rs  tilemap.rs
crates/game_core/src/world/resources/: iron.rs
crates/game_core/src/world/tile/: stone.rs
crates/game_multithread/: Cargo.toml
crates/game_multithread/src/: lib.rs
crates/game_worldgen/: Cargo.toml
crates/game_worldgen/src/: lib.rs  old_perlin.rs  segments.rs  world_generator.rs  worldgen.rs
crates/level_editor/: Cargo.toml
crates/level_editor/src/: level_editor.rs  lib.rs  main.rs  tools.rs
crates/mklogger/: Cargo.toml
crates/mklogger/src/: lib.rs  main.rs
crates/textures/: Cargo.toml
crates/textures/src/: lib.rs  loader.rs
crates/utils/: Cargo.toml
crates/utils/src/: direction.rs  lib.rs  silent_unwrap.rs
game/: Cargo.toml
game/locales/: en.yml  hu.yml
game/src/: assets.rs  game.rs  lib.rs  main.rs  textures.rs  utils.rs
game/src/comp/: err_page.rs  game.rs  mod.rs  toolbar.rs  tooltip_on_hover.rs
game/src/comp/tutorial/: mod.rs  tips.rs
game/src/game/: data.rs  goal.rs  mod.rs  runner.rs  timer.rs  tool.rs
game/src/levels/: levels.rs  mod.rs
game/src/scripts/: README.md  main.rs  mod.rs  tips.rs
game/src/scripts/tutorial/: controller.rs  mod.rs  tips.rs
game/src/textures/: loader.rs  mod.rs  texture_id.rs
game/src/tile/: dyn.rs  mod.rs  tiletex.rs
game/src/tile/tiles/: air.rs  mod.rs  stone.rs  wall.rs
game/src/utils/: connected.rs  mod.rs  multimap.rs  nodebug.rs
game/src/world/: mod.rs  render.rs  tilemap.rs  tool.rs  worldgen.rs
game/src/world/buildings/: channel_consumer.rs  conveyor.rs  debug_consumer.rs  junction.rs  mod.rs  router.rs  small_extractor.rs  smelter.rs
game/src/world/maps/: buildingsmap.rs  mod.rs  tilemap.rs
game/src/world/resources/: coal.rs  iron.rs  mod.rs
game/src/world/tile/: air.rs  coal_ore.rs  iron_ore.rs  mod.rs  render.rs  stone.rs  tiletex.rs
game/src/world/tile/tiles/: mod.rs  stone.rs
level_editor/: Cargo.toml
level_editor/src/: level_editor.rs  lib.rs
tips/: Cargo.toml
