[workspace]
resolver = "3"
members = [
	"sui/sui",
	"sui/sui_runner",
	"sui/asset_provider",
	"sui/asset_provider_image",
	"sui/asset_provider_font",
	"sui/stage_manager",
	"sui/stage_manager_loaders",
	"sui/stage_manager_remote",

	"crates/*"
]

[workspace.dependencies]

# sui crates

sui.path = "./sui/sui"
sui_runner.path = "./sui/sui_runner"

asset_provider.path = "./sui/asset_provider"
asset_provider_image.path = "./sui/asset_provider_image"
asset_provider_font.path = "./sui/asset_provider_font"

stage_manager.path = "./sui/stage_manager"
stage_manager_loaders.path = "./sui/stage_manager_loaders"
stage_manager_remote.path = "./sui/stage_manager_remote"

# game parts

game_core.path = "./crates/game_core"
utils.path = "./crates/utils"
textures.path = "./crates/textures"

game.path = "./crates/game"
level_editor.path = "./crates/level_editor"
async_texture.path = "./crates/async_texture"
comp_extra.path = "./crates/comp_extra"

tokio = "1.46.1"
futures = "0.3.31"
anyhow = "1.0.98"
strum = { version = "0.27.2", features = ["derive"] }
bincode = "2.0.1"
rfd = { version = "0.15.4", features = ["tokio", "xdg-portal"], default-features = false }
