[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
sui.workspace = true
sui_runner.workspace = true
asset_provider.workspace = true
stage_manager.workspace = true
asset_provider_image.workspace = true

tokio.workspace = true
futures.workspace = true
anyhow = "1.0.98"
reqwest = "0.12.22"
