[package]
name = "game"
version = "0.1.0"
edition = "2024"
default-run = "game"

[dependencies]
sui.workspace = true
sui_runner.workspace = true
asset_provider.workspace = true
stage_manager.workspace = true
asset_provider_image.workspace = true

tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
strum.workspace = true
bincode = { workspace = true, features = ["serde"] }

reqwest = "0.12.22"
perlin2d = "0.2.6"
glissade = "0.2.6"
include_dir = "0.7.4"
heapless.git = "https://github.com/rust-embedded/heapless"
tokio-util = { version = "0.7.15", features = ["compat", "io-util"] }
stage_manager_tokio.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
dirs = "6.0.0"
