[package]
name = "level_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
asset_provider.workspace = true
game.workspace = true
sui.workspace = true
sui_runner.workspace = true
tokio.workspace = true
strum.workspace = true
bincode.workspace = true
rfd = { version = "0.15.4", features = ["tokio", "xdg-portal"], default-features = false }
stage_manager.workspace = true
stage_manager_loaders.workspace = true
