[package]
name = "game"
version = "0.1.0"
edition = "2024"
default-run = "game"

[dependencies]
sui.workspace = true
sui_runner.workspace = true
asset_provider.workspace = true
stage_manager.workspace = true
asset_provider_image.workspace = true
asset_provider_font.workspace = true
stage_manager_loaders.workspace = true
stage_manager_remote.workspace = true

tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
strum.workspace = true
bincode = { workspace = true, features = ["serde"] }
rfd.workspace = true

reqwest = "0.12.22"
glissade = "0.2.6"
include_dir = "0.7.4"
heapless = { git = "https://github.com/rust-embedded/heapless", features = ["serde"] }
tokio-util = { version = "0.7.15", features = ["compat", "io-util"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
dirs = "6.0.0"
rust-i18n = "3.1.5"
sys-locale = "0.3.2"
fastnoise-lite = "1.1.1"
opener = "0.8.2"
async_texture.workspace = true
comp_extra.workspace = true
