[package]
name = "game_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
fastnoise-lite = "1.1.1"
heapless = { git = "https://github.com/rust-embedded/heapless", features = ["serde"] }
serde = "1.0.219"
strum.workspace = true
sui.workspace = true
textures.workspace = true
tokio.workspace = true
utils.workspace = true
