[package]
name = "game_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
heapless = { git = "https://github.com/rust-embedded/heapless", features = ["serde"] }
mklogger.workspace = true
serde.workspace = true
serde_cbor = "0.11.2"
strum.workspace = true
sui.workspace = true
textures.workspace = true
tokio.workspace = true
utils.workspace = true
