[package]
name = "game_worldgen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
asset_provider.workspace = true
bincode.workspace = true
fastnoise-lite = "1.1.1"
futures.workspace = true
game_core.workspace = true
mklogger.workspace = true
rand = "0.9.2"
serde.workspace = true
toml.workspace = true
