[package]
name = "level_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
asset_provider.workspace = true
game.workspace = true
sui.workspace = true
sui_runner.workspace = true
tokio.workspace = true
strum.workspace = true
bincode.workspace = true
rfd.workspace = true
stage_manager.workspace = true
stage_manager_loaders.workspace = true
arc-swap = "1.7.1"
comp_extra.workspace = true
